--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,6 +4,7 @@
 :root {
     --primary: #e67e22;
     --primary-var: #c76917;
+    --text-color: #555;
 }
 
 * {
@@ -15,7 +16,7 @@
 
 html {
     background-color: #fff;
-    color: #555;
+    color: var(--text-color);
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 20px;
@@ -81,19 +82,33 @@ h3 {
     margin-bottom: 15px;
 }
 
-.row {
-    width: 1140px;
-    margin: 0 auto;
-}
 
 section {
     padding: 80px 0;
 }
 
+.row {
+    width: 1140px;
+    margin: 0 auto;
+}
 .box {
     padding: 1%;
 }
-
+/******************************
+**           links
+******************************/
+a,
+a:visited{
+    text-decoration: none;
+    color: var(--primary);
+    padding-bottom: 1px;
+    border-bottom:2px solid var(--primary) ;
+}
+a:hover {
+    border-bottom:2px solid transparent ;
+    color: var(--text-color);
+    transition: .2s;
+}
 /******************************
 **        PARAGRAPHS
 *******************************/
@@ -117,7 +132,18 @@ section {
     display: block;
     margin-bottom: 10px;
 }
-
+.icon-small {
+    margin-right: 15px;
+    color: var(--primary);
+    font-size: 120%;
+    width: 30px;
+    display: inline-block;
+    text-align: center;
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -7px;
+    
+}
 /******************************
 **            Buttons
 *******************************/
@@ -289,23 +315,25 @@ section {
     height: 50px;
     margin-right: 10px;
 }
-.city-box{
-    padding-right: 5px;
-
+.btn-app,
+.btn-app:hover,
+.btn-app:visited{
+    border: none;
 }
+/************************/
+/**    CITY-FEATURES **/
+/************************/
 .city-img{
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     background-color: black;
 }
-.city-img:hover{
-    opacity: 1;
 
+
+.ion-social-twitter:hover{
+    color: rgb(0, 172, 237);
 }
-.icon-small{
-    margin-right: 10px;
-    color: var(--primary);
-}
-.city-box a{
-    color: var(--primary);
+
+.city-feature{
+    margin-bottom: 10px;
 }
