--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -28,6 +28,7 @@ header {
     background-image: linear-gradient(#000b, #000b), url('img/hero.jpg');
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 
@@ -150,7 +151,7 @@ a:hover {
 .btn:link,
 .btn:visited {
     /* unvisited*/
-    /* display: inline-block; */
+    display: inline-block;
     text-decoration: none;
     margin-right: 15px;
     padding: 10px 30px;
@@ -273,8 +274,9 @@ a:hover {
 /****************************/
 /*      Steps            */
 /****************************/
-.section-steps{
-    background-color: #f5f5f5;
+.section-steps,
+.section-plans{
+    background-color: #f4f4f4;
 }
 .steps-box:first-child {
     text-align: right;
@@ -336,4 +338,85 @@ a:hover {
 
 .city-feature{
     margin-bottom: 10px;
+}
+
+/****************************/
+/**    TESTIMONIALS        **/
+/****************************/
+
+.section-testimonials{
+    background-image: linear-gradient(#000c,#000c), url('img/back-customers.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    color: white;
+}
+blockquote{
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    margin-top: 20px;
+}
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+blockquote::before{
+    content: "\201C";
+    font-size: 400%;
+    display: block;
+    margin-bottom: -20px;
+    margin-left: -12px;
+}
+cite img{
+    vertical-align: middle;
+    border-radius: 50%;
+    height: 45px;
+    margin-right: 10px;
+}
+
+/*********************************/
+/*********   PLANS  **************/
+/*********************************/
+
+.plan-box {
+    background-color: #fff;
+    border-radius:5px ;
+    width: 90%;
+    margin: 0 auto;
+    box-shadow: 0 2px 2px #efefef;
+}
+.plan-box div{
+    padding: 15px;
+    border-bottom: 2px solid #e8e8e8;
+}
+
+.plan-price {
+    color:var(--primary);
+    font-weight: 100;
+    margin-bottom: 10px;
+    font-size: 300%;
+}
+.plan-price span{
+    font-weight: 300;
+    font-size: 30%;
+    
+}
+.plan-price-meal{
+    font-size: 80%;
+}
+
+.plan-box ul{
+    list-style: none;
+}
+.plan-box ul li{
+    padding: 5px 0;
+}
+.plan-box div:last-child{
+    text-align: center;
+    border: none;
+}
+.plan-box div:first-child {
+    background-color: #fcfcfc;
+    border-radius: 5px 5px 0 0 ;
 }
